<resources>
    <string name="app_name">Synapps</string>

    <string name="hello_world">Hello world!</string>
    <string name="goodbye_world">Goodbye world!</string>
    <string name="action_settings">Settings</string>
    <!--Login -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="invalid_login">The email address or password is invalid. Please try again.</string>
    <!--New User Selection -->
    <string name="patient_icon_text">Patient!</string>
    <string name="loved_one_icon_text">Loved One!</string>
    <!--Create New User-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="unmatched_password">The password does not match. Please confirm your password.</string>
    <!--Edit Notification-->
    <string name="date_field">Date Placeholder Label</string>
    <string name="noti_field">Notification</string>

    <!--Notification Type-->
    <string-array name="notification_types_spinner">
        <item>All Notifications</item>
        <item>Regular Notifications</item>
        <item>Meal Notifications</item>
        <item>Medication Notifications</item>
        <item>Finance Notifications</item>
    </string-array>
</resources>
