<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/date_field"
            android:textColor="@color/synapps_blue"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/noti_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_field"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/noti_field"
            android:textColor="@color/synapps_blue"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/noti_field_input"
            android:layout_below="@id/noti_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/rounded_edittext"
            android:imeOptions="actionNext" />


        <Button
            android:id="@+id/btnChangeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noti_field_input"
            android:text="Change Time"
            android:background="@drawable/rounded_button"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnChangeTime"
            android:text="Current Time (H:M): "
            android:textColor="@color/synapps_blue"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTime"
            android:text=""
            android:textColor="@color/synapps_blue"
            android:textSize="25sp"/>

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTime"
            android:textColor="@color/synapps_blue"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/submit_button"
            android:layout_below="@id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>